--- a/src/FrontEnd/css/Serchbar.css
+++ b/src/FrontEnd/css/Serchbar.css
@@ -33,7 +33,7 @@
 }
 
 .dropdownItemsearchbar:hover {
-    background-color: skyblue;
+    background-color: orange;
 }
 
 .dropdownItemsearchbar a {
