--- a/src/FrontEnd/css/Serchbar.css
+++ b/src/FrontEnd/css/Serchbar.css
@@ -36,6 +36,10 @@
     background-color: orange;
 }
 
+.serchtitle:hover{
+    color: white !important;
+}
+
 .dropdownItemsearchbar a {
     text-decoration: none;
     color: #007bff;
