--- a/src/FrontEnd/css/RegistrationMV.css
+++ b/src/FrontEnd/css/RegistrationMV.css
@@ -1475,6 +1475,13 @@ div.scrollmenu .imgScroll:hover {
   width: 230px;
 }
 
+@media (max-width:767px) {
+  .buybtn{
+    height: 48px;
+    width: 274px;
+  }
+}
+
 .descriptionline{
   margin-bottom: 10px !important;
 }
@@ -1489,6 +1496,34 @@ div.scrollmenu .imgScroll:hover {
     color: black;
     font-weight: bold;
     
+}
+
+@media (max-width:767px) {
+  .paymentgateway{
+    border: 1px solid #f9ba47;
+      width: 282px;
+      height: 50px;
+      margin-top: 82px;
+      margin-left: 11px;
+      background-color: #f9ba47;
+      color: black;
+      font-weight: bold;
+      
+  }
+}
+
+@media (max-width:767px) {
+  .packagepayment{
+    bottom: 270px !important;
+  }
+}
+.paymentbtn{
+  margin-left: 109px;
+}
+@media (max-width:767px) {
+  .paymentbtn{
+    margin-left: 64px;
+  }
 }
 
 .paymentgatewaypopup{
