--- a/src/FrontEnd/css/RegistrationMV.css
+++ b/src/FrontEnd/css/RegistrationMV.css
@@ -1862,3 +1862,84 @@ div.scrollmenu .imgScroll:hover {
 .businesstypeHover:hover{
   background-color: orange;
 }
+
+/* Workingarea */
+.WorkingareaUl{
+  display: block;
+  margin-left: 15px;
+}
+@media (max-width:767px) {
+  .WorkingareaUl{
+    display: block;
+  margin-left: 15px;
+  }
+}
+
+.WorkingareaH6{
+  margin-left: 17px;
+}
+
+.WorkingareaLabel{
+  margin-right: 27px;
+}
+@media (max-width:767px) {
+  .WorkingareaLabel{
+    margin-right: 35px;
+  }
+}
+
+.WorkingAreaPincode{
+  border: 2px solid #a7a3a3;
+    display: inline-block;
+    margin-bottom: 10px;
+    margin-right: 10px;
+    padding: 5px 10px;
+    position: relative;
+}
+.WorkingAreaRemovetbtn{
+  background: grey;
+  border: none;
+  border-radius: 50%;
+  color: white;
+  cursor: pointer;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 20px;
+  height: 20px;
+  padding: 0;
+  margin-left: 5px;
+}
+
+.Workingarea-checkbox{
+  appearance: none;
+  width: 16px;
+  height: 16px;
+  border: 2px solid #ccc;
+  background-color: #fff;
+  cursor: pointer;
+  position: relative;
+}
+.Workingarea-checkbox:checked{
+  background-color: orange;
+  border-color: orange;
+  color: white;
+}
+.Workingarea-checkbox:checked::before{
+  content: '✔';
+  color: white; 
+  font-size: 14px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); 
+
+}
+
+.companyD:focus{
+  color: #495057 !important;
+    background-color: #fff !important;
+    border-color: orange !important;
+    outline: 0;
+    box-shadow: 0 0 0 0.5px orange !important;
+}
