--- a/src/FrontEnd/css/RegistrationMV.css
+++ b/src/FrontEnd/css/RegistrationMV.css
@@ -1947,7 +1947,7 @@ div.scrollmenu .imgScroll:hover {
 
 
 .UserdeleteAccBtn{
-  border: 1px solid #f9ba47;
+  border: 1px solid orange;
     width: 263px;
     height: 50px;
     margin-top: 16px;
@@ -1960,13 +1960,13 @@ div.scrollmenu .imgScroll:hover {
 
 @media (max-width:767px) {
   .UserdeleteAccBtn{
-    border: 1px solid #f9ba47;
+    border: 1px solid orange;
       width: 282px;
       height: 50px;
-      margin-top: 82px;
+      margin-top: 10px;
       margin-left: 11px;
-      background-color: #f9ba47;
-      color: black;
+      background-color: orange;
+      color: white;
       font-weight: bold;
       
   }
@@ -1975,6 +1975,13 @@ div.scrollmenu .imgScroll:hover {
 .UDAimg{
   width: 93px;
   margin-left: 341px;
+}
+
+@media (max-width:767px) {
+  .UDAimg{
+    width: 93px;
+    margin-left: 117px;
+  }
 }
 
 .UDAhead{
@@ -1990,7 +1997,7 @@ div.scrollmenu .imgScroll:hover {
 }
 @media (max-width:767px) {
   .UDApopup1tbtn{
-    margin-left: 64px;
+    margin-left: -42px;
   }
 }
 
@@ -2057,4 +2064,13 @@ div.scrollmenu .imgScroll:hover {
   font-size: 18px;
   background-color: gray;
   width: 178px;
+}
+
+.UDAmainDiv{
+  height: 221px;
+}
+@media (max-width:767px) {
+  .UDAmainDiv{
+    height: 280px;
+  }
 }
